src/components/Layout/components/Sidebar/SideBar.module.scss
@import '../../../../styles/shared';

.container {
  position: fixed;
  top: 0;
  right: 0;
  width: $sidebar-width;
  height: calc(100% - #{$bar-height});
  background-color: #0d253b;
  z-index: 2;

  @include media-breakpoint-up(md) {
    position: fixed;
    height: 100%;
    width: $sidebar-width-md;
  }

  @include media-breakpoint-up(lg) {
    width: $sidebar-width-lg;
  }

  @include media-breakpoint-up(xl) {
    width: $sidebar-width-xl;
  }
}

.slide {
  transition: all 200ms ease-in-out;

  &--enter {
    right: -$sidebar-width;

    @include media-breakpoint-up(md) {
      right: -$sidebar-width-md;
    }

    @include media-breakpoint-up(lg) {
      right: -$sidebar-width-lg;
    }

    @include media-breakpoint-up(xl) {
      right: -$sidebar-width-xl;
    }
  }

  &--enter-active {
    right: 0;
  }

  &--exit {
    right: 0;
  }

  &--exit-active {
    right: -$sidebar-width;

    @include media-breakpoint-up(md) {
      right: -$sidebar-width-md;
    }

    @include media-breakpoint-up(lg) {
      right: -$sidebar-width-lg;
    }

    @include media-breakpoint-up(xl) {
      right: -$sidebar-width-xl;
    }
  }
}

.header {
  display: flex;
  align-items: center;
  height: $bar-height;
  padding: 0 1rem;
  background-color: $blue;

  @include media-breakpoint-up(md) {
    background-color: unset;
  }

  @include media-breakpoint-up(lg) {
    height: $bar-height-lg;
  }

  &__headline {
    margin: 0 0 0 1rem;
    color: $live-updates-light-blue;
    font-size: 24px;

    @include media-breakpoint-up(lg) {
      font-size: 32px;
    }
  }
}

.tab-select {
  width: 100%;
  margin: 2rem auto;
  padding: 0 1rem;
  display: flex;
  justify-content: center;
}

